Version 0.44 - 1 June 2002 - greg@censoft.com
	* fixed GrGetColorByName return value
	* added XMapSubwindows for xpilot
	* added XKeycodeToKeysym
	* return XKeyEvent.keycode as scancode (must be < 256 for FLTK)
	* add standard scancode table for XKeycodeToKeysym
	* implement XKeycodeToKeysym, rewrite XLookupKeysym
	* fix XQueryFont for fonts with firstchar > 256
	* added to CVS
	* changed decl for XrmLocaleOfDatabase (removed XCONST)
	* comment out XSetTSOrigin for fltk test/bitmap
	* added XQueryKeymap for fltk 1.0.11 build
Version 0.43 - 18 May 2002 - greg@censoft.com
	* fixed XQueryPointer return values
	* fixed ConfigureNotify notifications, UPDATE event reporting
	* hack XWindowEvent for FLTK NoExpose requirement w/XCopyArea
	* changed behaviour of XQLength to make FLTK select loop work
	* added XGetDefault, XRecolorCursor stub for FLTK 1.0.11 port
Version 0.42 - 12 Apr 2002 - greg@censoft.com
	* fixed bad reporting of state&button data for some events
	* fixed MotionNotify event reporting, added XPutBackEvent for qt
	* fixed popup menus by reading override_noredirect flags
	* fixed GrCreateFont bug to sometimes return 0
Version 0.41 - 19 Oct 2002 - greg@censoft.com
	* fixed per_char member in XFontStruct
Version 0.40 - 05 Oct 2002 - greg@censoft.com
	* added new font pattern match code, allow */? in XLoadFont
		and sort return values
	* alias fixed -> 6x13, don't create font unless found in XLoadFont
	* calculate DisplayWidthMM properly
	* added XmbSetWMProperties
	* free image->data, fixed put_pixel offsets
	* fix ParentRelative in XSetWindowBackgroundPixmap
	(01 Oct 02)
	* filled out XFontStruct members in QueryLoadFont
	* fixed expansion bug in XListFonts for -* and * patterns
	* allow NULL visual in XCreateImage
	* temp allow multiple XOpenDisplay calls (no GrClose)
	* filled out internal display values
	* added GetGeometry
	* added XListPixmapFormats for GTK+ port
	(19 Sep 02)
	(25 Aug 02)
	* tried fixing XPutImage for 1bpp images...